# ai-intel-pipeline

./: .gitignore  ENHANCED_RAG_GUIDE.md  FRONTEND_FIXES.md  QUICK_START.md  README.md  TEST_REPORT.md  WARP.md  _add_ask_ui.py  _add_links.py  _apply_overhaul.py  _dump_index.html  _fix_layout.py  _inject_items.py  _patch_report.py  _replace_html.py  _sanitize_html.py  _tmp_report.py  package-lock.json  pyproject.toml  requirements-web.txt  requirements.txt
.artifacts-status/model/: embeddings.npy  meta.jsonl
.artifacts2/weekly/: 2025-W42.md
.artifacts3/weekly/: 2025-W42.md
.artifacts4/weekly/: 2025-W42.md
.github/workflows/: apply.yml  cron.yml  deploy.yml  feedback.yml  ingest_from_issue.yml  ingest_manual.yml  weekly.yml
.warp/: session-log-2025-10-16.md
ai_intel_pipeline/: api_server.py  cli.py  config.py  exporter.py  feedback.py  llm.py  pipeline.py  report.py
ai_intel_pipeline/apply/: gh_cli.py  pr.py
ai_intel_pipeline/classify/: pillars.py
ai_intel_pipeline/delivery/: alerts.py  digest.py
ai_intel_pipeline/fetchers/: github.py  github_docs.py  github_search.py  rss.py  youtube.py
ai_intel_pipeline/gates/: gate1_validity.py  gate2_personalize.py
ai_intel_pipeline/model/: assistant.py  embedder.py  novelty.py  patterns.py  recommend.py
config/: pillars.yaml  settings.yaml  sources.yaml
profile/: profile.json
ui/: app.js  browse.html  index.html  items.html  items.json  report.json  styles.css
vault/: index.csv  state.json
web/: history.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+98 files in other folders)
